--- a/3.MD
+++ b/3.MD
@@ -20,3 +20,19 @@
 - व्यवसिताः = undertaken
 - एतत्-कविः = एतस्य कविः = poet of this
 - किल = right?
+
+**द्विरदेन्द्रगतिश्चकोरनेत्रः परिपूर्णेन्दुमुखः सुविग्रहश्च।\
+द्विजमुख्यतमः कविर्बभूव प्रथितः शूद्रक इत्यगाधसत्त्वः।।३।।**
+
+- द्विरद-इन्द्र-गतिः = गजों में उत्तम कि चाल वाला = one whose gait is like that of the best of the elephants
+- चकोर-नेत्रः = चकोर नामक पक्षी के आखों के समान वाला = with eyes like that of the chakora birds
+- परिपूर्ण-इन्दुमुखः = पूर्ण चन्द्रमा के मुख वाला = with the face of a full moon
+- सुविग्रहः = सुन्दर शरीर वाला = with a beautiful body
+- च = और = and
+- द्विज-मुख्यतमः = द्विजों में श्रेष्ठ = eminent among the Dvijas
+- कविः = कवि = Poet
+- बभूव = था = was
+- प्रथितः = प्रसिद्ध = famous
+- शूद्रकः = शूद्रक = Shudraka
+- इति = इस नाम से = by name
+- अगाध-सत्त्वः = असीमित बल वाला = with limitless strength
