--- a/4.MD
+++ b/4.MD
@@ -2,6 +2,7 @@
 **ऋग्वेदं सामवेदं गणितमथ कलां वैशिकीं हस्तिशिक्षां ज्ञात्वा शर्वप्रसादाद् व्यपगततिमिरे चक्षुषी चोपलभ्य।\
 राजानं वीक्ष्य पुत्रं परमसमुदयेनाश्वमेधेन चेष्ट्वा लब्ध्वा चायुः शताब्दं दशदिनसहितं शूद्रकोऽग्निं प्रविष्टः॥४॥**
 
+- अपि च = additionally
 - ऋग्वेदम् = ऋग्वेद = Rigveda
 - सामवेदम् = सामवेद = Samaveda
 - गणितम् = गणित = Math
